Enable docker publish

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 untappd.history {
   db = "file:./target/untappd-history"
 
-  client-id = ""
-  client-secret = ""
+  #client-id = ""
+  #client-secret = ""
 
   stream-backoff = 5 seconds
 }
