Expose daily stats via http

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,6 +5,11 @@ untappd.history {
   #client-secret = ""
 
   stream-backoff = 5 seconds
+
+  http {
+    interface = "0.0.0.0"
+    port = 8080
+  }
 }
 
 akka {
