--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,10 @@
 untappd.history {
-  db = "file:./target/untappd-history"
+  db = "tcp://localhost:1521/test"
 
   #client-id = ""
   #client-secret = ""
+
+  migration = no
 
   stream-backoff = 5 seconds
 
@@ -19,28 +21,68 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
+  actor {
+    allow-java-serialization = no
+    enable-additional-serialization-bindings = yes
+  }
+
   persistence {
     journal.plugin = "jdbc-journal"
     snapshot-store.plugin = "jdbc-snapshot-store"
+
+    typed.stash-capacity = 40960
   }
 }
 
 jdbc-journal {
   slick = ${slick}
+  tables.journal {
+    tableName = "JOURNAL"
+    columnNames {
+      ordering = "ORDERING"
+      deleted = "DELETED"
+      persistenceId = "PERSISTENCE_ID"
+      sequenceNumber = "SEQUENCE_NUMBER"
+      created = "CREATED"
+      tags = "TAGS"
+      message = "MESSAGE"
+    }
+  }
 }
 
 jdbc-snapshot-store {
   slick = ${slick}
+  tables.snapshot {
+    tableName = "SNAPSHOT"
+    columnNames {
+      persistenceId = "PERSISTENCE_ID"
+      sequenceNumber = "SEQUENCE_NUMBER"
+      created = "CREATED"
+      snapshot = "SNAPSHOT"
+    }
+  }
 }
 
 jdbc-read-journal {
   slick = ${slick}
+  tables.journal {
+    tableName = "JOURNAL"
+    columnNames {
+      ordering = "ORDERING"
+      deleted = "DELETED"
+      persistenceId = "PERSISTENCE_ID"
+      sequenceNumber = "SEQUENCE_NUMBER"
+      created = "CREATED"
+      tags = "TAGS"
+      message = "MESSAGE"
+    }
+  }
 }
 
 slick {
   profile = "slick.jdbc.H2Profile$"
   db {
-    url = "jdbc:h2:"${untappd.history.db}";DATABASE_TO_UPPER=false;"
+    url = "jdbc:h2:"${untappd.history.db}
     user = "root"
     password = "root"
     driver = "org.h2.Driver"
