Store checkins to Google Cloud Firestore

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,5 @@
-style = defaultWithAlign
+version = "2.3.2"
+align = more
 
 align.tokens               = ["%", "%%"]
 danglingParentheses        = true
