--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,12 @@
 untappd.history {
   #client-id = ""
   #client-secret = ""
+
+  http {
+    interface = "0.0.0.0"
+    port = 8080
+    port = ${?PORT}
+  }
 }
 
 akka {
