Expect client id and secret from environment variables

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,9 @@
 untappd.history {
-  #client-id = ""
-  #client-secret = ""
+  client-id = ""
+  client-id = ${?UNTAPPD_CLIENT_ID}
+
+  client-secret = ""
+  client-secret = ${?UNTAPPD_CLIENT_SECRET}
 
   http {
     interface = "0.0.0.0"
