Authenticate internal endpoints by a token

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,6 +5,9 @@ untappd.history {
   client-secret = ""
   client-secret = ${?UNTAPPD_CLIENT_SECRET}
 
+  internal-token = ""
+  internal-token = ${?INTERNAL_TOKEN}
+
   http {
     interface = "0.0.0.0"
     port = 8000
