--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,7 @@ jobs:
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v0.0.2
         with:
-          file_or_dir:
-            - .github/workflows/ci.yml
-            - gcloud/cloudbuild-master.yaml
+          file_or_dir: .github/workflows/ci.yml gcloud/cloudbuild-master.yaml
 
   test:
     name: Compile and test
