--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,10 +1,11 @@
 version = "3.0.0"
 align = more
+maxColumn = 120
 
-align.tokens               = ["%", "%%"]
-danglingParentheses        = true
-docstrings                 = JavaDoc
-indentOperator             = spray
-maxColumn                  = 120
-rewrite.rules              = [RedundantBraces, RedundantParens, SortImports]
+align.tokens."+" = [
+  {code = "%",  owner = "Term.ApplyInfix"},
+  {code = "%%", owner = "Term.ApplyInfix"},
+]
+
+rewrite.rules = [RedundantBraces, RedundantParens, SortImports]
 unindentTopLevelOperators = true
