update scalafmt config

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,4 +9,4 @@ align.tokens."+" = [
 ]
 
 rewrite.rules = [RedundantBraces, RedundantParens, SortImports]
-unindentTopLevelOperators = true
+indentOperator.exemptScope = all
